<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Experience"
    android:background="@color/main_back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            style="@style/TextInput"
            android:hint="@string/hint_copmany"
            app:errorEnabled="true"
            android:id="@+id/lay_expr_comp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/user_expr_comp"
                style="@style/TextEdit" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInput"
            android:hint="@string/hint_desig"
            app:errorEnabled="true"
            android:id="@+id/lay_expr_desig">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/user_expr_desig"
                style="@style/TextEdit" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInput"
            android:hint="@string/hint_description"
            app:errorEnabled="true"
            android:id="@+id/lay_expr_desc">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/user_expr_desc"
                style="@style/TextEdit" />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.design.widget.TextInputLayout
                style="@style/TextInput"
                android:layout_weight="1"
                android:hint="@string/hint_join"
                app:errorEnabled="true"
                android:id="@+id/lay_expr_join">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/user_expr_join"
                    style="@style/TextEdit"
                    android:focusable="false"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:hint="@string/hint_end"
                app:errorEnabled="true"
                android:id="@+id/lay_expr_end">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/user_expr_end"
                    style="@style/TextEdit"
                    android:focusable="false"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <CheckBox
            android:id="@+id/chek_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_curwork"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/back"
        android:id="@+id/lay_progress"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</FrameLayout>