<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile_Edit">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_back">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lay_firstname"
                    style="@style/TextInput"
                    android:layout_weight="1"
                    android:hint="@string/hint_fname"
                    app:errorEnabled="true">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/user_firstname"
                        style="@style/TextEdit" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lay_midlename"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_midle"
                    app:errorEnabled="true">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/user_midlename"
                        style="@style/TextEdit" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lay_lastname"
                style="@style/TextInput"
                android:hint="@string/hint_lname"
                app:errorEnabled="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/user_lastname"
                    style="@style/TextEdit" />
            </android.support.design.widget.TextInputLayout>

            <!--  <android.support.design.widget.TextInputLayout
                  style="@style/TextInput"
                  android:hint="@string/hint_enroll"
                  app:errorEnabled="true"
                  android:id="@+id/lay_enroll">

                  <android.support.v7.widget.AppCompatEditText
                      android:id="@+id/user_enroll"
                      style="@style/TextEdit"
                      android:inputType="number"/>
              </android.support.design.widget.TextInputLayout>

              <android.support.v7.widget.AppCompatSpinner
                  android:id="@+id/user_program"
                  style="@style/Spinner"
                  android:entries="@array/program"
                  android:layout_marginBottom="10dp"/>

              <android.support.v7.widget.AppCompatSpinner
                  android:id="@+id/user_degree"
                  style="@style/Spinner"
                  android:entries="@array/branch"
                  android:layout_marginBottom="10dp"/>

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:weightSum="2"
                  android:baselineAligned="true">

                  <RadioGroup
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="horizontal"
                      android:checkedButton="@id/user_gen_male"
                      android:layout_marginStart="15dp"
                      android:layout_weight="1">
                      <RadioButton
                          android:layout_width="wrap_content"
                          android:layout_height="match_parent"
                          android:text="Male"
                          android:id="@+id/user_gen_male"/>
                      <RadioButton
                          android:layout_width="wrap_content"
                          android:layout_height="match_parent"
                          android:text="Female"
                          android:id="@+id/user_gen_female"/>
                  </RadioGroup>

                  <android.support.v7.widget.AppCompatSpinner
                      android:id="@+id/user_gender"
                      style="@style/Spinner"
                      android:layout_weight="1"
                      android:entries="@array/gender"/>

                  <android.support.design.widget.TextInputLayout
                      android:layout_height="wrap_content"
                      android:layout_width="match_parent"
                      style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
                      android:layout_marginEnd="15dp"
                      android:layout_weight="1"
                      android:hint="@string/hint_dob"
                      app:errorEnabled="true"
                      android:id="@+id/lay_dob">

                      <android.support.v7.widget.AppCompatEditText
                          android:id="@+id/user_dob"
                          style="@style/TextEdit"
                          android:inputType="number"/>
                  </android.support.design.widget.TextInputLayout>

              </LinearLayout> -->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lay_address"
                style="@style/TextInput"
                android:hint="@string/hint_address"
                app:errorEnabled="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/user_address"
                    style="@style/TextEdit" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lay_city"
                style="@style/TextInput"
                android:hint="@string/hint_city"
                app:errorEnabled="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/user_city"
                    style="@style/TextEdit" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lay_district"
                    style="@style/TextInput"
                    android:hint="@string/hint_district"
                    app:errorEnabled="true"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/user_district"
                        style="@style/TextEdit" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lay_pincode"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_pin"
                    app:errorEnabled="true">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/user_pincode"
                        style="@style/TextEdit"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lay_state"
                style="@style/TextInput"
                android:hint="@string/hint_state"
                app:errorEnabled="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/user_state"
                    style="@style/TextEdit" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/back"
            android:id="@+id/lay_progress"
            android:visibility="gone">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

    </FrameLayout>

</ScrollView>