<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:background="@color/main_back">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/Text"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1.70"
                    android:text="@string/hint_basicinfo" />

                <ImageButton
                    android:id="@+id/basic_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/edit" />
            </LinearLayout>

            <ImageView style="@style/Divider" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_profile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/user_name"
                        style="@style/Text"
                        android:gravity="center"
                        android:text="@string/hint_name" />

                    <TextView
                        android:id="@+id/user_email"
                        style="@style/Text"
                        android:gravity="center"
                        android:text="metaliyanaxxxx@gmail.com"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <TextView
                        android:id="@+id/user_mobile"
                        style="@style/Text"
                        android:gravity="center"
                        android:text="+91909xxxx909"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <ImageView style="@style/Divider" />

                    <TextView
                        android:id="@+id/user_enroll"
                        style="@style/Text"
                        android:text="@string/hint_enroll"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <TextView
                        android:id="@+id/user_branch"
                        style="@style/Text"
                        android:layout_marginTop="5dp"
                        android:maxLines="3"
                        android:text="@string/Computer"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/user_gender"
                            style="@style/Text"
                            android:text="Male"
                            android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                        <TextView
                            android:id="@+id/user_dob"
                            style="@style/Text"
                            android:layout_marginStart="10dp"
                            android:text="10-10-1000"
                            android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/user_addr"
                        style="@style/Text"
                        android:layout_marginTop="5dp"
                        android:maxLines="3"
                        android:text="E310, maninagar, kakriya road"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <TextView
                        android:id="@+id/user_addr2"
                        style="@style/Text"
                        android:text="ahemdabad-gujrat"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/Text"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1.70"
                    android:text="@string/hint_edu" />

                <ImageButton
                    android:id="@+id/edu_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/edit" />
            </LinearLayout>

            <ImageView style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyler_education"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/Text"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1.70"
                    android:text="@string/hint_expr" />

                <ImageButton
                    android:id="@+id/expr_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/edit" />
            </LinearLayout>

            <ImageView style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyler_experience"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/lay_progress"
            android:visibility="gone">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </FrameLayout>
</ScrollView>